Fix horizontal scroll in blog post page from abnormally large titles

--- a/src/partials/_blogpost.scss
+++ b/src/partials/_blogpost.scss
@@ -1,7 +1,9 @@
 .post {
 
   &__title {
+    max-width: 100%;
     font-size: 5rem;
+    word-wrap: break-word;
   }
 
   &__details {
